--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Grayscale - Start Bootstrap Theme</title>
+        <title>Smart-IT site</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -62,13 +62,57 @@
                             HTML과 CSS 그리고 JavaScript를 이용한 Web Page 개발 과정을 알아보고,
                             직접 실습하며 학습합니다.
                             <br />
-                            <a class="btn btn-outline-light btn-cta mt-3" href="#curriculum">결과 보기</a>
+                            <a class="btn btn-outline-light btn-cta mt-3" href="#curriculum">알아보기</a>
                         </p>
                     </div>
                 </div>
                 <img class="img-fluid w-75 h-60" src="assets/img/aboutbg.jpg" alt="..." />
             </div>
         </section>
+        <!-- Curriculum -->
+        <section class="projects-section bg-light" id="curriculum">
+            <div class="container px-4 px-lg-5">
+                <!-- Featured Project Row-->
+                <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/edu.jpg" alt="..." /></div>
+                    <div class="col-xl-4 col-lg-5">
+                        <div class="featured-text text-center text-lg-left">
+                            <h4>충북대 방문후 체험</h4>
+                            <p class="text-black-50 mb-0">스마트 IT 4대 얼짱</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project One Row-->
+                <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
+                    <div class="col-lg-6"><img class="img-fluid w-100" src="assets/img/1.jpg" alt="..." /></div>
+                    <div class="col-lg-6">
+                        <div class="bg-black text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-left">
+                                    <h4 class="text-white">IT과의 자랑 김 정 식</h4>
+                                    <p class="mb-0 text-white-50">IT과에 와서 멋있는 개발자가 될거야!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project Two Row-->
+                <div class="row gx-0 justify-content-center">
+                    <div class="col-lg-6"><img class="img-fluid w-100" src="assets/img/edu2.jpg" alt="..." /></div>
+                    <div class="col-lg-6 order-lg-first">
+                        <div class="bg-black text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-right">
+                                    <h4 class="text-white">IT과의 최고의 개발자 하상현</h4>
+                                    <p class="mb-0 text-white-50">멋있는 해커가 되고 싶어!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- FAQ -->
         <section class="projects-section bg-light" id="faq">
             <div class="container px-4 px-lg-5">
@@ -107,49 +151,6 @@
                         </h2>
                         <div id="a3" class="accordion-collapse collapse" aria-labelledby="q3" data-bs-parent="#faqAccordion">
                             <div class="accordion-body">프로젝트 섹션에 대표 결과물을 정리해 공개합니다.</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Curriculum -->
-        <section class="projects-section bg-light" id="curriculum">
-            <div class="container px-4 px-lg-5">
-                <!-- Featured Project Row-->
-                <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/edu.jpg" alt="..." /></div>
-                    <div class="col-xl-4 col-lg-5">
-                        <div class="featured-text text-center text-lg-left">
-                            <h4>충북대 방문후 체험</h4>
-                            <p class="text-black-50 mb-0">스마트 IT 4대 얼짱</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Project One Row-->
-                <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid w-100" src="assets/img/1.jpg" alt="..." /></div>
-                    <div class="col-lg-6">
-                        <div class="bg-black text-center h-100 project">
-                            <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">IT과의 자랑 김 정 식</h4>
-                                    <p class="mb-0 text-white-50">IT과에 와서 멋있는 개발자가 될거야!</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Project Two Row-->
-                <div class="row gx-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid w-100" src="assets/img/edu2.jpg" alt="..." /></div>
-                    <div class="col-lg-6 order-lg-first">
-                        <div class="bg-black text-center h-100 project">
-                            <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">IT과의 최고의 개발자 하 하 현</h4>
-                                    <p class="mb-0 text-white-50">멋있는 해커가 되고 싶어!</p>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
